--- a/index.html
+++ b/index.html
@@ -195,6 +195,66 @@
         </div>
         </div>
     </section>
+    <!-- ----------Registeration------------ -->
+    <section id="register">
+      <h2 id="reg-head"> Start Your Journey with Us</h2>
+      <div class="reg-cont">
+      <div class="reg-img">
+        <img src="./Images/form.jpg" alt="">
+      </div>
+      <div class="form">
+        <h3>Create Free Account Now! </h3>
+        <input type="text" placeholder="Name" name="" id="">
+        <input type="text" placeholder="Email" name="" id="">
+        <input type="text" placeholder="Course" name="" id="">
+        <input type="text" placeholder="Phone Number" name="" id="">
+        <div class="btn_1">
+         <button id="submit">Submit</button>
+        </div>
+      </div>
+    </div>
+
+    </section>
+
+  <footer>
+    <div class="col">
+      <h3>Top Product</h3>
+      <li>Our courses</li>
+      <li>Our Programs</li>
+      <li>Internship</li>
+      <li>Our Services</li>
+    </div>
+    <div class="col">
+      <h3>Career Path</h3>
+      <li>Data Engineer</li>
+      <li>software Developer</li>
+      <li>Cloud Network Engineer</li>
+      <li>Full Stack Developer</li>
+    </div>
+    <div class="col">
+      <h3>Features</h3>
+      <li>C++ Tutorial</li>
+      <li>PHP Tutorial</li>
+      <li>Javascript Tutorial</li>
+      <li>Cloud Computing Tutorial</li>
+    
+    </div>
+    <div class="col">
+      <h3>Resources</h3>
+      <li>Guides</li>
+      <li>Roadmap</li>
+      <li>Experts</li>
+      <li>Achievement</li>
+    </div>
+    <div class="col">
+      <h3>NewsLetter</h3>
+      <p>You can trust us, we only send promo offers</p>
+      <div class="subs">
+        <input type="text" placeholder="Email Address" name="" id="">
+        <button id="bt-subs">Subscribe</button>
+      </div>
+    </div>
+  </footer>
 
 
     <script src="index.js"></script>
